[gd_scene load_steps=3 format=3 uid="uid://bxy0nxusf62dk"]

[ext_resource type="Script" path="res://game/scenes/defence/ui/build_cursor.gd" id="1_sw5j2"]
[ext_resource type="Texture2D" uid="uid://dw4asl67s2250" path="res://icon.svg" id="2_p4pm0"]

[node name="BuildCursor" type="Node2D"]
script = ExtResource("1_sw5j2")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.501961)
texture = ExtResource("2_p4pm0")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 194

[node name="PolyShape" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
